# omnibotgenesis

./: .env  .env.example  .env.kraken  .env.pro  .env.railway  .env.sanitized  .env.template  .gitignore  .kraken_ready  .kraken_status  .replit  .replit_ignore  .trading_config_optimizado  .trading_config_optimo_comisiones  .vault_local_key  CHANGELOG.md  Caddyfile  DEPLOY_TO_RAILWAY.sh  Dockerfile  ESTRUCTURA_PROYECTO.md  MIGRATION_GUIDE.md  POGR_ADVERSARIAL_AUDIT.md  POGR_TRUST_ASSUMPTION_MAP.md  POGR_WEB_API_OFFLINE_CONSISTENCY_REPORT.md  PROJECT_STRUCTURE.md  PROMETHEUS_GRAFANA_SETUP.md  Procfile  RAILWAY_24_7_FIX.md  RAILWAY_DEPLOY_TRIGGER.txt  RAILWAY_QUICKSTART.md  RAILWAY_SETUP_HAROLD.md  REVIEWER.md  STOCK_TRADING_README.md  SUBIR_A_GITHUB.md  _demo_check.py  advanced_features.py  analysis_engine.py  app.py  ares_quantum_protocol.py  auto_optimization_engine.py  (+78 more)
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--An-lisis-de-la-Respuesta-Model-Drift-y-QAOA1-Puntos-Fuertes-T-cnicamente-S-lidos-M-tricas-de-M-1763463017695_1763463017695.txt  Pasted--An-lisis-y-Respuesta-a-la-Estrategia-Quantum-FastHarold-la-ejecuci-n-del-an-lisis-quantum-fast-c-1763368073704_1763368073705.txt  Pasted--DESARROLLOS-CONCEPTUALES-COMPLETADOS-1-ARQUITECTURA-OMNIX-V5-4-ULTRA-python-SISTEMA-DE-CERTE-1763810542021_1763810542022.txt  Pasted--Excelente-Esta-primera-respuesta-de-OMNIX-V5-4-ULTRA-es-muy-buena-pero-tiene-algunos-puntos-d-bil-1763460359215_1763460359215.txt  Pasted--Hola-Harold-Activar-el-CEREBRO-CONVERSACIONAL-es-mi-especialidad-Vamos-a-desmenuzar-esta--1763509745382_1763509745382.txt  Pasted--Hola-Harold-Encantado-de-ayudarte-hoy-Vaya-pregunta-la-que-me-traes-Como-OMNIX-V5-4-ULT-1763512519837_1763512519838.txt  Pasted--Hola-Harold-Soy-OMNIX-V5-4-ULTRA-listo-para-analizar-este-escenario-de-locos-que-me-has-prese-1763509576625_1763509576626.txt  Pasted--Hola-Harold-Soy-OMNIX-V5-4-ULTRA-tu-asistente-de-trading-personal-Analicemos-r-pidamente-tu-s-1763509668861_1763509668862.txt  Pasted--Hola-Harold-Soy-OMNIX-V5-4-ULTRA-tu-asistente-de-trading-personal-listo-para-optimizar-tu-po-1763509843398_1763509843399.txt  Pasted--OMNIX-AUTO-TRADING-BOT-V5-4-ULTRA-TRADING-AUTOM-TICO-24-7-Sistema-de-trading-autom-tico-c-1763593992346_1763593992348.txt  Pasted--OMNIX-AUTO-TRADING-BOT-V5-4-ULTRA-TRADING-AUTOM-TICO-24-7-Sistema-de-trading-autom-tico-c-1763594110287_1763594110290.txt  Pasted--OMNIX-DATABASE-SERVICE-ENTERPRISE-Gesti-n-profesional-de-PostgreSQL-con-todas-las-tablas-d-1763710240047_1763710240047.txt  Pasted--OMNIX-V5-1-ENTERPRISE-AI-Models-Manager-Gesti-n-de-m-ltiples-modelos-IA-GPT-4o-Gemini-2-0--1763332878684_1763332878684.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Configuraci-n-Centralizada-Premium-Nivel-Enterprise-Grade-Escalabili-1763489901884_1763489901885.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Configuraci-n-Centralizada-Premium-Nivel-Enterprise-Grade-Escalabili-1763509150813_1763509150814.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Conversational-AI-Service-Main-orchestrator-for-AI-functionality-Reem-1763331426318_1763331426318.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Conversational-AI-Service-Main-orchestrator-for-AI-functionality-Reem-1763537955273_1763537955274.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Conversational-AI-Service-Main-orchestrator-for-AI-functionality-Reempla-1763514034883_1763514034885.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Prompts-Context-Manager-Intent-Analysis-Context-Building-Prompt-En-1763449746505_1763449746506.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Prompts-Context-Manager-Intent-Analysis-Context-Building-Prompt-En-1763457644493_1763457644495.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Prompts-Context-Manager-Intent-Analysis-Context-Building-Prompt-En-1763536721456_1763536721457.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Prompts-Context-Manager-Intent-Analysis-Context-Building-Prompt-En-1763537712179_1763537712180.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Redis-Cache-System-Performance-10x-faster-responses-Capacity-50K-c-1763490659557_1763490659558.txt  Pasted--OMNIX-V5-1-ENTERPRISE-Redis-Cache-System-Performance-10x-faster-responses-Capacity-50K-c-1763707902850_1763707902850.txt  Pasted--OMNIX-V5-2-QUANTUM-ULTIMATE-AI-Service-Enterprise-Simplified-Versi-n-standalone-sin-depend-1763331355250_1763331355250.txt  Pasted--OMNIX-V5-2-QUANTUM-ULTIMATE-Trading-Service-Enterprise-Simplified-Versi-n-simplificada-par-1763508316624_1763508316625.txt  Pasted--OMNIX-V5-3-ULTRA-Quantum-Enhanced-Monte-Carlo-Simulation-Engine-Simulaciones-probabil-sticas-1763491182395_1763491182396.txt  Pasted--OMNIX-V6-0-Stock-Trading-Module-ESTADO-ACTIVO-Y-LISTO-PARA-USAR-El-m-dulo-de-bolsa-de-valore-1763372145743_1763372145743.txt  Pasted--Qu-tomas-SHORT-LONG-o-NEUTRAL-Da-1-posici-n-exacta-2-del-portafolio-3-estructura-d-1763583604470_1763583604471.txt  Pasted--RAILWAY-FIX-Forzar-imports-correctos-Ejecuta-esto-ANTES-de-main-py-en-Railway-import-1763710170869_1763710170870.txt  Pasted--Region-us-west1-Using-Nixpacks-context-fzpn-3cSL--1763587890214_1763587890215.txt  Pasted--This-is-not-legal-advice-For-more-information-see-https-ntruprime-cr-yp-to-faq-html-https--1763362077088_1763362077089.txt  Pasted--USA-VIDEO-ANALYZER-ULTRA-V5-3-1-GPT-4-Vision-Qu-detectar-as-2-Gemini-Vision-Segunda-opi-1763510486569_1763510486570.txt  Pasted--VERIFICACI-N-SISTEMA-NERVIOSO-AN-LISIS-DE-RESPUESTA-python-EVALUACI-N-DETALLADA-PREGUNTA--1763808759785_1763808759786.txt  Pasted--WSGI-Entry-Point-para-Railway-import-os-import-sys-import-logging-import-threading--1763710119284_1763710119284.txt  Pasted--from-main-railway-import-create-flask-app-start-telegram-bot-background-ModuleNotFoundError-N-1763365938023_1763365938024.txt  (+148 more)
avm_snapshots/: audit_test_calibration.json  (+267 more)
docs/dist_sprint/: arxiv_paper.md  ci_fixed.yml  hash_ts.ts  jest.config.js  pr_template.md  publish_crates_fixed.yml  publish_npm_fixed.yml  publish_pypi_fixed.yml  pyproject.toml  test_hash_parity.py  types_rs_fixed.rs
sdk/python/: README.md  omnix_atf_verify.py  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/omnix/: __init__.py  client.py  exceptions.py  models.py
(+1975 files in other folders)
