[project]
name = "omnix"
version = "6.5.4d"
description = "OMNIX V6.5.4d INSTITUTIONAL+ Trading System"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnix"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
exclude = [
    ".git",
    "__pycache__",
    ".pythonlibs",
    "attached_assets",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
exclude = [
    "tests/",
    "attached_assets/",
    ".pythonlibs/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["omnix_core", "omnix_services"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.importlinter]
root_package = "src.omnix"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Domain Cannot Import Application"
type = "forbidden"
source_modules = [
    "src.omnix.domain",
]
forbidden_modules = [
    "src.omnix.application",
]
comment = "Domain layer cannot depend on application layer (inverted dependency)"

[[tool.importlinter.contracts]]
name = "Domain Cannot Import Infrastructure"
type = "forbidden"
source_modules = [
    "src.omnix.domain",
]
forbidden_modules = [
    "src.omnix.infrastructure.adapters",
]
comment = "Domain layer cannot depend on infrastructure implementations"

[[tool.importlinter.contracts]]
name = "Legacy Bridge Allowed"
type = "layers"
layers = [
    "interfaces",
    "infrastructure",
    "application",
    "domain",
]
containers = [
    "src.omnix",
]
comment = "Permissive layering - legacy imports from omnix_* are allowed during migration"
